java11 호환 메소드 변경
Stream toList()는 java17버전부터 사용 가능